<resources>
    <string name="app_name">HabiTa</string>

    <string name="saveBtn">Save</string>

    <string name="habit_name">Habit Name</string>

    <string name="occurrence_daily">Daily</string>
    <string name="occurrence_weekday">Weekday</string>
    <string name="occurrence_weekend">Weekend</string>

    <string name="day_of_week_mon_short">MON</string>
    <string name="day_of_week_mon">Monday</string>
    <string name="day_of_week_tue_short">TUE</string>
    <string name="day_of_week_tue">Tuesday</string>
    <string name="day_of_week_wed_short">WED</string>
    <string name="day_of_week_wed">Wednesday</string>
    <string name="day_of_week_thu_short">THU</string>
    <string name="day_of_week_thu">Thursday</string>
    <string name="day_of_week_fri_short">FRI</string>
    <string name="day_of_week_fri">Friday</string>
    <string name="day_of_week_sat_short">SAT</string>
    <string name="day_of_week_sat">Saturday</string>
    <string name="day_of_week_sun_short">SUN</string>
    <string name="day_of_week_sun">Sunday</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">cancel</string>
    <string name="title_activity_menu">MenuActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_new_menu">NewMenuActivity</string>
    <string name="title_activity_about">About</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="habitTimeHint">07:00</string>
    <string name="del">Del</string>
    <string name="notification_title">HabiTa</string>
    <string name="success">success</string>
    <string name="title_activity_history_view">HistoryView</string>
    <string name="addBtn">Add</string>
    <string name="open_history_view">Open History View</string>
    <string name="channel_name">Reminder</string>
    <string name="channel_description">Habit reminder notifications</string>
    <string name="arrow_right"><![CDATA[>]]></string>
</resources>
