<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/habitNameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/linLayoutDayOfWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroupOccurrence">

                    <ToggleButton
                        android:id="@+id/monBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/circle_toggle_button_bg"
                        android:clickable="false"
                        android:minWidth="48dp"
                        android:text="@string/day_of_week_mon_short"
                        android:textColor="@drawable/circle_toggle_button_txt"
                        android:textOff="@string/day_of_week_mon_short"
                        android:textOn="@string/day_of_week_mon_short" />

                    <ToggleButton
                        android:id="@+id/tueBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/circle_toggle_button_bg"
                        android:clickable="false"
                        android:minWidth="48dp"
                        android:text="@string/day_of_week_tue_short"
                        android:textColor="@drawable/circle_toggle_button_txt"
                        android:textOff="@string/day_of_week_tue_short"
                        android:textOn="@string/day_of_week_tue_short" />

                    <ToggleButton
                        android:id="@+id/wedBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/circle_toggle_button_bg"
                        android:clickable="false"
                        android:minWidth="48dp"
                        android:text="@string/day_of_week_wed_short"
                        android:textColor="@drawable/circle_toggle_button_txt"
                        android:textOff="@string/day_of_week_wed_short"
                        android:textOn="@string/day_of_week_wed_short" />

                    <ToggleButton
                        android:id="@+id/thuBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/circle_toggle_button_bg"
                        android:clickable="false"
                        android:minWidth="48dp"
                        android:text="@string/day_of_week_thu_short"
                        android:textColor="@drawable/circle_toggle_button_txt"
                        android:textOff="@string/day_of_week_thu_short"
                        android:textOn="@string/day_of_week_thu_short" />

                    <ToggleButton
                        android:id="@+id/friBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/circle_toggle_button_bg"
                        android:clickable="false"
                        android:minWidth="48dp"
                        android:text="@string/day_of_week_fri_short"
                        android:textColor="@drawable/circle_toggle_button_txt"
                        android:textOff="@string/day_of_week_fri_short"
                        android:textOn="@string/day_of_week_fri_short" />

                    <ToggleButton
                        android:id="@+id/satBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/circle_toggle_button_bg"
                        android:clickable="false"
                        android:minWidth="48dp"
                        android:text="@string/day_of_week_sat_short"
                        android:textColor="@drawable/circle_toggle_button_txt"
                        android:textOff="@string/day_of_week_sat_short"
                        android:textOn="@string/day_of_week_sat_short" />

                    <ToggleButton
                        android:id="@+id/sunBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/circle_toggle_button_bg"
                        android:clickable="false"
                        android:minWidth="48dp"
                        android:text="@string/day_of_week_sun_short"
                        android:textColor="@drawable/circle_toggle_button_txt"
                        android:textOff="@string/day_of_week_sun_short"
                        android:textOn="@string/day_of_week_sun_short" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/delBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/del" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>